# park_pal_talents

./: .gitignore  Makefile  README.md
atomic_lite/: README.md  pyproject.toml
backend/: Dockerfile  Homepage.py  Makefile  Procfile  api.Dockerfile  docker-compose.yml  frontend.Dockerfile  pyproject.toml  requirements.txt  start.sh
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 41abf0ccf6ad_set_up_first_table.py
backend/app/: main.py
backend/app/database/: database.py  generate_random_data.sql  park_pal_db.sqlite  random_data.sql
backend/app/models/: park.py
backend/app/schemas/: park.py
backend/app/sql_app/: database.py  sql_app.db
backend/streamlit/: Homepage.py
backend/streamlit/pages/: page_1.py  page_2.py
