[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Amir Kalloe <amir.kalloe@data-talents>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
sqlalchemy = "^2.0.26"
uvicorn = "^0.27.1"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.1"
streamlit = "^1.31.1"
matplotlib = "^3.8.2"
statsmodels = "^0.14.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
